--- a/cool_pics/coolpics.css
+++ b/cool_pics/coolpics.css
@@ -18,7 +18,7 @@ font-size: 1.2em;
 background-color: var(--text-light);
 }
 
-img {
+.gallery img {
 	max-width: 100%;
     height: 250px;
     width: 250px;
@@ -64,12 +64,46 @@ header button {
     color: white;
     font-size: 1.8em;
 }
+.hidden {
+    display: none;
+}
 
 .gallery {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.viewer {
+    position: fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: rgba(0, 0, 0, 0.75);
+    display:grid;
+    grid-template-rows: auto, auto;
+    place-items: center;
+    
+}
+
+.viewer img {
+    max-width: 90%; /* Responsive sizing for larger screens */
+    max-height: 90vh;
+    
+}
+
+.close-viewer {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    color:white;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font-size:xx-large;
 }
 
 @media (min-width: 700px) {
