--- a/cool_pics/coolpics.css
+++ b/cool_pics/coolpics.css
@@ -32,25 +32,26 @@ background-color: #52479D;
 color:white;
 text-align: center;
 padding: 0.5rem 0 1rem 0;
-
 }
 
 header ul li a {
-    color:white;
-    
+    color:white;  
 }
+
 header ul li {
     list-style-type: none;
     font-size: 1.2em;
-
 }
+
 header ul {
     margin: 0;
     padding: 0;
 }
+
 header h1 {
     margin-top: 0;
 }
+
 h1, h2 {
     font-family: var(--secondary-font);
     text-align: center;
@@ -64,6 +65,7 @@ header button {
     color: white;
     font-size: 1.8em;
 }
+
 .hidden {
     display: none;
 }
@@ -85,13 +87,11 @@ header button {
     display:grid;
     grid-template-rows: auto, auto;
     place-items: center;
-    
 }
 
 .viewer img {
-    max-width: 90%; /* Responsive sizing for larger screens */
+    max-width: 90%; 
     max-height: 90vh;
-    
 }
 
 .close-viewer {
@@ -110,8 +110,7 @@ header button {
     .gallery {
         flex-direction: row;
         flex-wrap: wrap;
-        gap: 1rem;
-        
+        gap: 1rem; 
     }
     
 }
@@ -120,8 +119,7 @@ header button {
     header ul {
         display: flex;
         justify-content: center;
-        gap: 5rem;
-        
+        gap: 5rem; 
     }
     header button {
         display: none;
